--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "A service class for quickly building listings of entities.",
   "type": "library",
   "require": {
-    "laravel/framework": "^5.4|^5.5",
+    "laravel/framework": "^5.4|^5.5|^5.6",
     "php": "^7.0"
   },
   "autoload": {
